styling updates to fix invisible links persisting in mdl nav, make landing page text more readable

--- a/src/App.css
+++ b/src/App.css
@@ -120,9 +120,10 @@ p.contactLink {
 }
 
 .about-text {
-  text-align: justify;
+  text-align: center;
   font-size: 16px;
   margin: 0em 2em 1em 2em;
+  line-height: 30px;
 }
 .tile-container {
   display: flex;
@@ -168,6 +169,14 @@ p.contactLink {
   border-top: 3px solid black;
   margin-bottom: 0px;
 }
+#contact-box {
+  display: flex;
+  flex-direction: column;
+}
+#contact-box div {
+  display: flex;
+  justify-content: center;
+}
 @media only screen and (max-width: 600px) {
   /*covers navbar for some reason on mobile
   .button-bg{
@@ -210,13 +219,25 @@ p.contactLink {
   .tile p {
     font-size: 1em;
   }
+  div.mdl-layout__drawer {
+    display: flex;
+  }
 }
 
-#contact-box {
-  display: flex;
-  flex-direction: column;
+@media only screen and (min-width: 600px) {
+  #drawer {
+    display: none;
+  }
+  div.mdl-layout__drawer-button {
+    display: none;
+  }
+  div.mdl-layout__drawer {
+    display: none;
+  }
 }
-#contact-box div {
-  display: flex;
-  justify-content: center;
+@media only screen and (min-width: 1600px) {
+  .about-text {
+    margin: 0em auto 1em auto;
+    max-width: 960px;
+  }
 }
